<?xml version="1.0" encoding="utf-8"?><!-- Окно добавления своей станции: название и ссылка на поток.
     TextInputLayout из Material - он умеет показывать подсказку и текст ошибки прямо под полем -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_beforeOrAfterElement">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_addMyStation"
        style="@style/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/space_beforeOrAfterElement"
        android:text="@string/addMyStation_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_myStationName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addMyStation_name"
        app:boxStrokeColor="@color/orange"
        app:errorEnabled="true"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_myStationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_myStationUrl"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:hint="@string/addMyStation_url"
        app:boxStrokeColor="@color/orange"
        app:errorEnabled="true"
        app:helperText="@string/addMyStation_urlHelp"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_myStationUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textUri"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_beforeOrAfterElement"
        android:gravity="end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_addMyStationCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addMyStation_cancel"
            android:textColor="@color/orange"
            android:textSize="@dimen/button_text"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_addMyStationSave"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addMyStation_save"
            android:textColor="@color/orange"
            android:textSize="@dimen/button_text"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>