<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">


        <LinearLayout
            android:id="@+id/linear_settingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_arrowBack"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/space_small"
                android:paddingBottom="@dimen/space_small"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_navigate_before_24_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_myFavorites_title"
                style="@style/login_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/space_beforeOrAfterElement"
                android:text="@string/settings_tittle2" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/space_small"
                android:paddingBottom="@dimen/space_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_textAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_32"
            android:paddingTop="@dimen/space_small"
            android:paddingEnd="@dimen/space_32"
            android:paddingBottom="@dimen/space_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_settingsTitle">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about1"
                style="@style/login_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/space_beforeOrAfterElement"
                android:text="@string/settings_text1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about2"
                style="@style/login_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/space_beforeOrAfterElement"
                android:text="@string/settings_text2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about3"
                style="@style/login_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/space_beforeOrAfterElement"
                android:text="@string/settings_text3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about4"
                style="@style/login_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/space_beforeOrAfterElement"
                android:text="@string/settings_text4"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about5"
                style="@style/login_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_text5"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Сайт проекта. Раньше здесь была ссылка на Boosty с картинкой кофейной кружки: просьба о поддержке
             в приложении без рекламы и покупок выглядит странно, да и Google Play к таким ссылкам относится настороженно -->
        <LinearLayout
            android:id="@+id/linear_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingStart="@dimen/space_32"
            android:paddingEnd="@dimen/space_32"
            android:paddingBottom="@dimen/space_beforeOrAfterElement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_textAbout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_site"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/space_beforeOrAfterElement"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_public_24_orange" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_site"
                style="@style/login_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_site" />
        </LinearLayout>

        <!-- Политика конфиденциальности: её требует Google Play, и пользователю удобно открыть её прямо из приложения -->
        <LinearLayout
            android:id="@+id/linear_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingStart="@dimen/space_32"
            android:paddingEnd="@dimen/space_32"
            android:paddingBottom="@dimen/space_beforeOrAfterElement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_site">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_privacy"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/space_beforeOrAfterElement"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_privacy_24_orange" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_privacy"
                style="@style/login_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_privacy" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_block"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/text_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_privacy" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_mail"
            style="@style/login_bottom_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_beforeOrAfterElement"
            android:paddingTop="@dimen/space_beforeOrAfterElement"
            android:paddingEnd="@dimen/space_beforeOrAfterElement"
            android:paddingBottom="0dp"
            android:text="@string/settings_textMail"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mail"
            style="@style/login_bottom_orange_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_beforeOrAfterElement"
            android:paddingTop="@dimen/space_small"
            android:paddingEnd="@dimen/space_beforeOrAfterElement"
            android:paddingBottom="@dimen/space_32"
            android:text="@string/settings_mail"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>